# rhoai-security-manifest

./: .gitignore  CLAUDE.md  CONTAINER_DISCOVERY_RESOLUTION.md  DASHBOARD_README.md  IMPLEMENTATION_FIX.md  LICENSE  Makefile  PRODUCT_LISTINGS_INTEGRATION.md  README.md  pyproject.toml  requirements.txt  rhoai-securiy-manifest-prd.md  rhoai_security_dashboard.py  rhoai_security_manifest.sh  rhoai_security_manifest_poc.sh  rhoai_security_manifest_pyxis.sh  rhoai_security_pyxis.py  rhoai_security_pyxis.sh  run_dashboard.sh  test_report.json
config/: containers.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  USER_GUIDE.md
rhoai-security-dashboard/: README.md  package-lock.json  package.json
rhoai-security-dashboard/public/: sample_data.json
rhoai-security-dashboard/src/: App.jsx  index.css
rhoai-security-dashboard/src/components/: CVEList.jsx  Dashboard.jsx  ImageTable.jsx  SecurityCharts.jsx  SecuritySummary.jsx
rhoai-security-dashboard/src/utils/: dataProcessing.js
rhoai_security_manifest/: __init__.py
rhoai_security_manifest/analysis/: __init__.py  grading.py  orchestrator.py
rhoai_security_manifest/api/: __init__.py  container_catalog.py  product_listings.py  security_data.py  security_data_mapper.py
rhoai_security_manifest/cli/: __init__.py  main.py
rhoai_security_manifest/cli/commands/: cache.py  compare.py  generate.py  interactive.py  validate.py
rhoai_security_manifest/database/: models.py  repository.py  schema.py
rhoai_security_manifest/reports/generators/: __init__.py  html.py
rhoai_security_manifest/tui/: __init__.py
rhoai_security_manifest/utils/: config.py  container_validation.py  http_debug.py  logging.py
scripts/: performance_comparison.py
tests/: test_basic.py  test_discovery_optimization.py
